Added basic event form

--- a/public/portal/index.html
+++ b/public/portal/index.html
@@ -46,8 +46,12 @@
         <div id="base-content" class="content">
 
             
-    <h1 id="page-title">Companies</h1>
-<p>Companies Home Hub</p>
+    <h1 id="page-title">Portal</h1>
+<p>Welcome to the H3 Portal
+<ul class="actions vertical">
+    <li><a href="{{ .url | absURL}}">Request a Service</a></li>
+    <li><a href="../bookRoom">Book a Room</a></li>
+</ul></p>
 
 
 
