--- a/public/bookroom/index.html
+++ b/public/bookroom/index.html
@@ -46,8 +46,8 @@
         <div id="base-content" class="content">
 
             
-    <h1 id="page-title">Companies</h1>
-<p>Companies Home Hub</p>
+    <h1 id="page-title">Book a Room</h1>
+<p>These rooms are open:</p>
 
 
 
