--- a/public/login/index.html
+++ b/public/login/index.html
@@ -46,8 +46,9 @@
         <div id="base-content" class="content">
 
             
-    <h1 id="page-title">Companies</h1>
-<p>Companies Home Hub</p>
+    <h1 id="page-title">Login</h1>
+<p>Username
+Password</p>
 
 
 
