--- a/public/servicerequest/index.html
+++ b/public/servicerequest/index.html
@@ -46,8 +46,8 @@
         <div id="base-content" class="content">
 
             
-    <h1 id="page-title">Companies</h1>
-<p>Companies Home Hub</p>
+    <h1 id="page-title">Service Request</h1>
+<p>Here you can request a service</p>
 
 
 
