--- a/public/spaces/bookevent/index.html
+++ b/public/spaces/bookevent/index.html
@@ -46,8 +46,8 @@
         <div id="base-content" class="wrapper content">
 
             
-    Book Event
-    <p>Here is our event booking.</p>
+    <h1 id="page-title">Book Event</h1>
+    <p>Book an event!</p>
 
 
 
