Updated event form and removed any 404s

--- a/public/portal/service-request/index.html
+++ b/public/portal/service-request/index.html
@@ -44,8 +44,9 @@
         <div id="base-content" class="wrapper content">
 
             
-    <h1 id="page-title">Categories</h1>
-    
+    Service Request
+    <p>Here you can request a service</p>
+
 
 
         </div>
