--- a/public/spaces/book-event/index.html
+++ b/public/spaces/book-event/index.html
@@ -44,8 +44,9 @@
         <div id="base-content" class="wrapper content">
 
             
-    <h1 id="page-title">Categories</h1>
-    
+    Book Event
+    <p>Here is the form to book an event</p>
+
 
 
         </div>
