--- a/public/portal/accounting/index.html
+++ b/public/portal/accounting/index.html
@@ -44,8 +44,9 @@
         <div id="base-content" class="wrapper content">
 
             
-    <h1 id="page-title">Categories</h1>
-    
+    Accounting
+    <p>Here is accounting information</p>
+
 
 
         </div>
