--- a/public/portal/manuals/index.html
+++ b/public/portal/manuals/index.html
@@ -44,8 +44,9 @@
         <div id="base-content" class="wrapper content">
 
             
-    <h1 id="page-title">Categories</h1>
-    
+    Manuals
+    <p>Here are the manuals</p>
+
 
 
         </div>
