--- a/public/portal/servicerequest/index.html
+++ b/public/portal/servicerequest/index.html
@@ -44,8 +44,9 @@
         <div id="base-content" class="wrapper content">
 
             
-    <h1 id="page-title">Categories</h1>
-    
+    Service Request
+    <p>Here you can request a service</p>
+
 
 
         </div>
