--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Playfair+Display" />
 
 
-<link rel="shortcut icon" href="img/H3-Black-Logo.png" type="image/x-icon" />
+<link rel="shortcut icon" href="https://h3-sdpt.firebaseapp.com/img/H3-Black-Logo.png" type="image/x-icon" />
 
     </head>
 
@@ -94,7 +94,7 @@
                   <img class="d-block w-100" src="img/H3 Office.png"  alt="Second slide">
                 </div>
                 <div class="carousel-item">
-                  <img class="d-block w-100" src=".../800x400?auto=yes&bg=555&fg=333&text=Third slide" alt="Third slide">
+                  <img class="d-block w-100" src="img/H3 Office.png" alt="Third slide">
                 </div>
               </div>
               <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
