--- a/public/companies/index.html
+++ b/public/companies/index.html
@@ -63,7 +63,7 @@
                     <img class="company-logo card-img" src="../../../img/company-logos/Articity.png" alt="Card image">
                     <div id="panel" class="card-img-overlay">
                         <h3 class="card-title">Articity</h3>
-                        <p class="card-text">Here is a brief desccription</p>
+                        <p class="card-text">Here is a brief description</p>
                     </div>
                 </div>
             </div>
@@ -73,7 +73,7 @@
                     <img class="company-logo card-img" src="../../../img/company-logos/Bankogiro.png" alt="Card image">
                     <div id="panel" class="card-img-overlay">
                         <h3 class="card-title">Bankogiro</h3>
-                        <p class="card-text">Here is a brief desccription</p>
+                        <p class="card-text">Here is a brief description</p>
                     </div>
                 </div>
             </div>
@@ -83,7 +83,7 @@
                     <img class="company-logo card-img" src="../../../img/company-logos/Casa%20Peota.png" alt="Card image">
                     <div id="panel" class="card-img-overlay">
                         <h3 class="card-title">Casa Peota</h3>
-                        <p class="card-text">Here is a brief desccription</p>
+                        <p class="card-text">Here is a brief description</p>
                     </div>
                 </div>
             </div>
@@ -93,7 +93,7 @@
                     <img class="company-logo card-img" src="../../../img/company-logos/daAaB.png" alt="Card image">
                     <div id="panel" class="card-img-overlay">
                         <h3 class="card-title">daAaB</h3>
-                        <p class="card-text">Here is a brief desccription</p>
+                        <p class="card-text">Here is a brief description</p>
                     </div>
                 </div>
             </div>
@@ -103,7 +103,7 @@
                     <img class="company-logo card-img" src="../../../img/company-logos/fairbnb.png" alt="Card image">
                     <div id="panel" class="card-img-overlay">
                         <h3 class="card-title">fairbnb</h3>
-                        <p class="card-text">Here is a brief desccription</p>
+                        <p class="card-text">Here is a brief description</p>
                     </div>
                 </div>
             </div>
@@ -113,7 +113,7 @@
                     <img class="company-logo card-img" src="../../../img/company-logos/JVF.png" alt="Card image">
                     <div id="panel" class="card-img-overlay">
                         <h3 class="card-title">JVF</h3>
-                        <p class="card-text">Here is a brief desccription</p>
+                        <p class="card-text">Here is a brief description</p>
                     </div>
                 </div>
             </div>
@@ -123,7 +123,7 @@
                     <img class="company-logo card-img" src="../../../img/company-logos/Marketzquare.png" alt="Card image">
                     <div id="panel" class="card-img-overlay">
                         <h3 class="card-title">Marketzquare</h3>
-                        <p class="card-text">Here is a brief desccription</p>
+                        <p class="card-text">Here is a brief description</p>
                     </div>
                 </div>
             </div>
@@ -133,7 +133,7 @@
                     <img class="company-logo card-img" src="../../../img/company-logos/OpenStreetLamp.png" alt="Card image">
                     <div id="panel" class="card-img-overlay">
                         <h3 class="card-title">OpenStreetLamp</h3>
-                        <p class="card-text">Here is a brief desccription</p>
+                        <p class="card-text">Here is a brief description</p>
                     </div>
                 </div>
             </div>
@@ -143,7 +143,7 @@
                     <img class="company-logo card-img" src="../../../img/company-logos/Swarmoola.png" alt="Card image">
                     <div id="panel" class="card-img-overlay">
                         <h3 class="card-title">Swarmoola</h3>
-                        <p class="card-text">Here is a brief desccription</p>
+                        <p class="card-text">Here is a brief description</p>
                     </div>
                 </div>
             </div>
