--- a/public/spaces/index.html
+++ b/public/spaces/index.html
@@ -54,7 +54,25 @@
 
             
     <h1 id="page-title">Spaces</h1>
-    <p><a href="event-form">Apply here</a></p>
+    <!--<iframe src="https://360player.io/p/DzAaJM/" frameborder="0" width="100%" height="500px" allowfullscreen data-token="DzAaJM"></iframe>-->
+
+<p><a id="loginBtn" class="btn btn-outline-light my-2 my-sm-0" href="event-form" role="button">Apply Here</a></p>
+
+<div class="row event-row">
+    <div class="col">
+        <img src="/img/event-space.jpg" alt="">
+    </div>
+    <div class="col">
+        <h4>Main Area</h4>
+        <ul>
+            <li>500 square feet</li>
+            <li>12 tables</li>
+            <li>60 chairs</li>
+            <li>Weekdays: $</li>
+            <li>Weekends and Nights: $$</li>
+        </ul>
+    </div>
+</div>
 
 
 
