Added to home page

--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,10 @@
             </div>
 
 
-            <p>Welcome to H3</p>
+            <br><br><br><br><br>
+            <h3>Welcome to H3</h3>
+            <br><br><br><br><br>
+            <img src="img/SerenDPT.png" alt="">
             SerenDPT Mission<br>
             Upcoming Events<br>
             Blog<br>
