--- a/public/spaces/index.html
+++ b/public/spaces/index.html
@@ -56,8 +56,8 @@
     <h1 id="page-title">Spaces</h1>
     <!--<iframe src="https://360player.io/p/DzAaJM/" frameborder="0" width="100%" height="500px" allowfullscreen data-token="DzAaJM"></iframe>-->
 
-<p><a id="loginBtn" class="btn btn-outline-light my-2 my-sm-0" href="event-form" role="button">Apply Here</a></p>
-
+<p><a id="loginBtn" class="btn btn-outline-light my-2 my-sm-0" href="event-form" role="button">Apply Here</a>
+<!--
 <div class="row event-row">
     <div class="col">
         <img src="/img/event-space.jpg" alt="">
@@ -72,7 +72,7 @@
             <li>Weekends and Nights: $$</li>
         </ul>
     </div>
-</div>
+</div>--></p>
 
 
 
