Organized history page

--- a/public/index.html
+++ b/public/index.html
@@ -85,16 +85,15 @@
             <br><br><br><br><br>
             <h3>Welcome to H3</h3>
             <br><br><br><br><br>
+            <h4>SerenDPT Mission</h4>
             <img src="img/SerenDPT.png" alt="">
-            SerenDPT Mission<br>
             Upcoming Events<br>
+            <br><br><br><br><br>
             Blog<br>
-            Spaces<br>
+            <br><br><br><br><br>
             Past Events<br>
             <br><br><br><br><br>
-            <br><br><br><br><br>
-            <br><br><br><br><br>
-            <br><br><br><br><br>
+            Spaces<br>
             <br><br><br><br><br>
         </div>
         <div id="footer" class="alt">
