working on event form

--- a/public/history/index.html
+++ b/public/history/index.html
@@ -57,9 +57,9 @@
     <div id="history">
 
         <div id="links">
-            <a href="../art">Art</a><br>
-            <a href="../presentation">Presentation</a><br>
-            <a href="../documentary">Documentary</a>
+            <a href="../art">Art Gallery</a><br>
+            <a href="../presentation">Building Presentation</a><br>
+            <a href="../documentary">History Documentary</a>
         </div>
 
         <div class="d-flex flex-row">
