Made art page hugoeqsue

--- a/public/spaces/event-form/index.html
+++ b/public/spaces/event-form/index.html
@@ -124,24 +124,26 @@
     <div>
         <h2>Requirements</h2>
         <ul>
-            <li>Usher:<input type="checkbox"></li>
-            <li>Room Attendant:<input type="checkbox"></li>
-            <li>Mic:<input type="checkbox"></li>
-            <li>Speakers:<input type="checkbox"></li>
-            <li>Chairs:<input type="text"></li>
+            <li><input type="checkbox"> Usher</li>
+            <li><input type="checkbox"> Room Attendant</li>
+            <li><input type="checkbox"> Mic</li>
+            <li><input type="checkbox"> Speakers</li>
+            <li><input type="text"> Chairs</li>
+            <li><input type="text"> Tables</li>
         </ul>
 
     </div>
 
-    <div>
-        <h2>Final Cost:</h2>
-        € XXX.XX
-        <input type="submit">
+
+    <input type="submit">
+    
+    <div id="cost">
+        Final Cost: € XXX.XX
     </div>
 
 
 
-
+<!--
 
     <hr>
 
@@ -295,6 +297,7 @@
     </div>
 
     <input type="submit">
+    -->
 </form>
 
 
