Added textboxes to home carousel

--- a/public/events/index.html
+++ b/public/events/index.html
@@ -55,7 +55,7 @@
         <div id="base-content" class="wrapper content">
 
             
-    <h1 id="page-title">Start-ups</h1>
+    <h1 id="page-title">Events</h1>
 
     <div class="row company-pane">
 
