Added banner to pages

--- a/public/companies/index.html
+++ b/public/companies/index.html
@@ -52,12 +52,12 @@
 
 </nav>
 
-        <div id="base-content" class="wrapper content">
+        <div id="base-content" class="wrapper">
 
             
     <h1 id="page-title">Start-ups</h1>
 
-    <div class="row company-pane">
+    <div class="row company-pane content">
 
         
             <div class="col-sm company-col">
