--- a/public/history/index.html
+++ b/public/history/index.html
@@ -52,16 +52,29 @@
 
 </nav>
 
-        <div id="base-content" class="wrapper content">
+        <div id="base-content" class="wrapper">
 
             
-    <h1 id="page-title">History</h1>
-    <div id="history">
+    <div id="page-banner">
+        <img id="page-image" src="../../../img/history/banner.png" alt="">
+        <h1 id="page-title">History</h1>
+    </div>
 
-        <div id="links">
-            <a href="../art">Art Gallery</a><br>
-            <a href="../presentation">Building Presentation</a><br>
-            <a href="../documentary">History Documentary</a>
+    <div id="history" class="content">
+
+        <div id="links" class="row">
+            <div class="col">
+                <img class="image-preview" src="../../../img/history/Old H3.png" alt="">
+                <a class="btn btn-outline-light my-2 my-sm-0" href="../art">View Art Gallery</a>
+            </div>
+            <div class="col">
+                <img class="image-preview" src="../../../img/history/Old H3.png" alt="">
+                <a class="btn btn-outline-light my-2 my-sm-0" href="../presentation">Building Presentation</a>
+            </div>
+            <div class="col">
+                <img class="image-preview" src="../../../img/history/Old H3.png" alt="">
+                <a class="btn btn-outline-light my-2 my-sm-0" href="../documentary">History Documentary</a>
+            </div>
         </div>
 
         <div class="d-flex flex-row">
@@ -80,7 +93,7 @@
                 <p>The Herion Textile Company would remain in the church complex for over 80 years before closing. The factory was incorporated in the church during the industrialization of Giudecca due to its cheaper land property compared to historical Venice with its isolated location. During this time a temporary second floor and third was constructed and the entire church was whitewashed, covering remaining historical art pieces not already pillaged and hiding the frescos from view. The hall and apsidal chapels were divided into those three floors supported on two rows of pillars to increase production space for the factory. Machining equipment was installed on these floors including hoists, steam piping, cement baths, electrical wiring and exhaust fans. The director’s office was the cupola where the frescos were located beneath the dome. Similarly, the deposito was used as a storage facility by the company, with similar alterations added to the building as well. After the company’s closure, the church was in a very critical condition that required extensive work to restore.</p>
             </div>
             <div class="p-2">
-                <img src="../../../img/history/Textile Factory.png" alt="" align="left">
+                <img src="../../../img/history/Full Textile Factory.png" alt="" align="left">
             </div>
         </div>
 
