--- a/public/login/index.html
+++ b/public/login/index.html
@@ -52,11 +52,11 @@
 
 </nav>
 
-        <div id="base-content" class="wrapper content">
+        <div id="base-content" class="wrapper">
 
             
     <h1 id="page-title">Login</h1>
-    <div id="login-pane">
+    <div id="login-pane content">
         Username:
         <input type="text">
         <br>
