--- a/public/spaces/event-form/index.html
+++ b/public/spaces/event-form/index.html
@@ -52,7 +52,7 @@
 
 </nav>
 
-        <div id="base-content" class="wrapper content">
+        <div id="base-content" class="wrapper">
 
             
     <h1 id="page-title">Event Form</h1>
