Refactored history page

--- a/public/companies/index.html
+++ b/public/companies/index.html
@@ -55,7 +55,10 @@
         <div id="base-content" class="wrapper">
 
             
-    <h1 id="page-title">Start-ups</h1>
+    <div id="page-banner">
+        <img id="page-image" src="../../../img/history/banner.jpeg" alt="">
+        <h1 id="page-title">Start-ups</h1>
+    </div>
 
     <div class="row company-pane content">
 
