--- a/public/events/index.html
+++ b/public/events/index.html
@@ -55,8 +55,14 @@
         <div id="base-content" class="wrapper">
 
             
-    <h1 id="page-title">Events</h1>
-    <p>Upcoming Events</p>
+    <div id="page-banner">
+        <img id="page-image" src="../../../img/history/banner.jpeg" alt="">
+        <h1 id="page-title">Events</h1>
+    </div>
+    <div class="content">
+        <p>Upcoming Events</p>
+        <p>Past Events</p>
+    </div>
 
 
         </div>
