--- a/public/history/index.html
+++ b/public/history/index.html
@@ -56,9 +56,11 @@
 
             
     <div id="page-banner">
-        <img id="page-image" src="../../../img/history/banner.png" alt="">
+        <img id="page-image" src="../../../img/history/banner.jpeg" alt="">
         <h1 id="page-title">History</h1>
     </div>
+
+    
 
     <div id="history" class="content">
 
