--- a/public/index.html
+++ b/public/index.html
@@ -98,7 +98,7 @@
                                   <h3>Event X</h3>
                                   <p>Learn what an algorave is</p>
                                   
-                                    <a class="btn btn-light my-2 my-sm-0" href="https://player.vimeo.com/video/187702511" role="button">Register Here</a>
+                                    <a class="btn btn-light my-2 my-sm-0" href="http://kindohm.github.io/live-coding-presentation/#/" role="button">Register Here</a>
                                   
                               </div>
                           </div>
