--- a/public/login/index.html
+++ b/public/login/index.html
@@ -55,15 +55,17 @@
         <div id="base-content" class="wrapper">
 
             
-    <h1 id="page-title">Login</h1>
-    <div id="login-pane content">
-        Username:
-        <input type="text">
-        <br>
-        Password:
-        <input type="text">
-        <br>
-        <input class="btn btn-outline-light my-2 my-sm-0" type="submit" role="button">
+    <div class="pad-top">
+        <h1 class="title">Login</h1>
+        <div id="login-pane" class="content">
+            Username:
+            <input type="text">
+            <br>
+            Password:
+            <input type="text">
+            <br>
+            <input class="btn btn-outline-light my-2 my-sm-0" type="submit" role="button">
+        </div>
     </div>
 
 
