--- a/public/portal/accounting/index.html
+++ b/public/portal/accounting/index.html
@@ -55,9 +55,13 @@
         <div id="base-content" class="wrapper">
 
             
-    <h1 id="page-title">Accounting</h1>
-    <p>Here is accounting information</p>
+    <div class="pad-top">
+        <h1 class="title">Accounting</h1>
+        <div class="content">
+            <p>Here is accounting information</p>
 
+        </div>
+    </div>
 
 
         </div>
