--- a/public/portal/index.html
+++ b/public/portal/index.html
@@ -55,8 +55,10 @@
         <div id="base-content" class="wrapper">
 
             
-    <h1 id="page-title">Portal</h1>
-    <p>Welcome to the H3 Portal
+    <div class="pad-top">
+        <h1 class="title">Portal</h1>
+        <div class="content">
+            <p>Welcome to the H3 Portal
 <ul class="actions vertical">
     <li><a href="documents">Documents</a></li>
     <li><a href="manuals">Manuals</a></li>
@@ -64,6 +66,8 @@
     <li><a href="service-request">Request a Repair</a></li>
 </ul></p>
 
+        </div>
+    </div>
 
 
         </div>
