--- a/public/portal/service-request/index.html
+++ b/public/portal/service-request/index.html
@@ -55,9 +55,13 @@
         <div id="base-content" class="wrapper">
 
             
-    <h1 id="page-title">Service Request</h1>
-    <p>Here you can request a service</p>
+    <div class="pad-top">
+        <h1 class="title">Service Request</h1>
+        <div class="content">
+            <p>Here you can request a service</p>
 
+        </div>
+    </div>
 
 
         </div>
