--- a/public/presentation/index.html
+++ b/public/presentation/index.html
@@ -55,9 +55,13 @@
         <div id="base-content" class="wrapper">
 
             
-    <h1 id="page-title">Presentation</h1>
-    <iframe class="presentation" src="https://docs.google.com/presentation/d/e/2PACX-1vRrCBk9x0i8ukvjnkhMVdaCoomPY6C-SBLlIEgHT_en1srX8_c1np1hPA534pVAieWbom2aY_euJKNq/embed?start=false&loop=false&delayms=15000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+    <div class="pad-top">
+        <h1 class="title">Presentation</h1>
+        <div class="content">
+            <iframe class="presentation" src="https://docs.google.com/presentation/d/e/2PACX-1vRrCBk9x0i8ukvjnkhMVdaCoomPY6C-SBLlIEgHT_en1srX8_c1np1hPA534pVAieWbom2aY_euJKNq/embed?start=false&loop=false&delayms=15000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
+        </div>
+    </div>
 
 
         </div>
