--- a/public/spaces/event-form/index.html
+++ b/public/spaces/event-form/index.html
@@ -55,8 +55,10 @@
         <div id="base-content" class="wrapper">
 
             
-    <h1 id="page-title">Event Form</h1>
-    <form id="eventForm">
+    <div class="pad-top">
+        <h1 class="title">Event Form</h1>
+        <div class="content">
+            <form id="eventForm" class="content">
 
     <div>
         <h2>Contact</h2>
@@ -138,7 +140,7 @@
 
 
     <input type="submit">
-    
+
     <div id="cost">
         Final Cost: € XXX.XX
     </div>
@@ -302,6 +304,8 @@
     -->
 </form>
 
+        </div>
+    </div>
 
 
         </div>
