--- a/public/documentary/index.html
+++ b/public/documentary/index.html
@@ -55,14 +55,18 @@
         <div id="base-content" class="wrapper">
 
             
-    <h1 id="page-title">Documentary</h1>
-    <iframe width="420" height="315"
+    <div class="pad-top">
+        <h1 class="title">Documentary</h1>
+        <div class="content">
+            <iframe width="420" height="315"
     src="https://www.youtube.com/embed/ShCkU3ZzXDM">
 </iframe>
 <iframe width="420" height="315"
     src="https://www.youtube.com/embed/GEOh8uazxVc">
 </iframe>
 
+        </div>
+    </div>
 
 
         </div>
