--- a/public/spaces/index.html
+++ b/public/spaces/index.html
@@ -55,8 +55,10 @@
         <div id="base-content" class="wrapper">
 
             
-    <h1 id="page-title">Spaces</h1>
-    <!--<iframe src="https://360player.io/p/DzAaJM/" frameborder="0" width="100%" height="500px" allowfullscreen data-token="DzAaJM"></iframe>-->
+    <div class="pad-top">
+        <h1 class="title">Spaces</h1>
+        <div class="content">
+            <!--<iframe src="https://360player.io/p/DzAaJM/" frameborder="0" width="100%" height="500px" allowfullscreen data-token="DzAaJM"></iframe>-->
 
 <p><a id="loginBtn" class="btn btn-outline-light my-2 my-sm-0" href="event-form" role="button">Apply Here</a>
 <!--
@@ -76,6 +78,8 @@
     </div>
 </div>--></p>
 
+        </div>
+    </div>
 
 
         </div>
