--- a/public/404.html
+++ b/public/404.html
@@ -18,6 +18,13 @@
 
 <link rel="shortcut icon" href="https://h3-sdpt.firebaseapp.com/img/H3-Black-Logo.png" type="image/x-icon" />
 
+
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.14.2/TweenMax.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/ScrollMagic.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/plugins/animation.gsap.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/plugins/debug.addIndicators.js"></script>
+
     </head>
 
     <body>
@@ -34,7 +41,6 @@
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 
     <div class="navbar-nav ml-auto">
-      <a class="nav-item nav-link active" href="https://h3-sdpt.firebaseapp.com/">Home <span class="sr-only">(current)</span></a>
 
       
           <a class="nav-item nav-link" href="https://h3-sdpt.firebaseapp.com/history">History</a>
@@ -46,7 +52,7 @@
           <a class="nav-item nav-link" href="https://h3-sdpt.firebaseapp.com/spaces">Spaces</a>
       
 
-      <a id="loginBtn" class="btn btn-light my-2 my-sm-0" href="https://h3-sdpt.firebaseapp.com/login" role="button">Login</a>
+      <a class="btn btn-light my-2 my-sm-0" href="https://h3-sdpt.firebaseapp.com/login" role="button">Login</a>
     </div>
 
   </div>
