--- a/public/index.html
+++ b/public/index.html
@@ -73,8 +73,7 @@
                  <div class="intro-text">
                      <h1>We are H3</h1>
                      <h2 class="rotating-text">The third iteration of creators</h2>
-                     <h2 class="rotating-text">The second iteration of creators</h2>
-                     <h2 class="rotating-text">The first iteration of creators</h2>
+                     
                 </div>
             </div>
 
@@ -86,12 +85,15 @@
                 <h2>The Goal</h2>
                 <div class="fade-container row">
                     <div class="fade-card col">
+                        <img class="icon" src="img/people-icon.png" alt="">
                         <h4>100 Jobs</h4>
                     </div>
                     <div class="fade-card col">
+                        <img class="icon" src="img/board-icon.png" alt="">
                         <h4>10 Companies</h4>
                     </div>
                     <div class="fade-card col">
+                        <img class="icon" src="img/timer-icon.png" alt="">
                         <h4>5 Years</h4>
                     </div>
                 </div>
