Added user backend

--- a/public/register/index.html
+++ b/public/register/index.html
@@ -62,9 +62,22 @@
 
             
     <div class="pad-top">
-        <h1 class="title">Categories</h1>
-        <div class="content">
-            
+        <h1 class="title">Register</h1>
+        <div id="register-pane" class="content">
+            First Name:
+            <input id="register-first" type="text" placeholder="First Name">
+            <br>
+            Last Name:
+            <input id="register-last" type="text" placeholder="Last Name">
+            <br>
+            Email:
+            <input id="register-email" type="email" placeholder="Email">
+            <br>
+            Password:
+            <input id="register-password" type="password" placeholder="Password">
+            <br>
+            <input class="btn btn-light my-2 my-sm-0" type="submit" role="button" onclick="register()">
+            <br>
         </div>
     </div>
 
