Refactored to Hugo Frontmatter

--- a/public/portal/accounting/index.html
+++ b/public/portal/accounting/index.html
@@ -51,7 +51,10 @@
           <a class="nav-item nav-link" href="https://h3-sdpt.firebaseapp.com/spaces">Spaces</a>
       
 
-      <a class="btn btn-light my-2 my-sm-0" href="https://h3-sdpt.firebaseapp.com/login" role="button">Login</a>
+      <a id="documents-tab" class="nav-item nav-link" href="../documents">Documents</a>
+      <a id="username" class="nav-item nav-link"></a>
+      <a id="login-btn" class="btn btn-light my-2 my-sm-0" href="https://h3-sdpt.firebaseapp.com/login" role="button">Login</a>
+      <a id="logout-btn" class="btn btn-light my-2 my-sm-0" onclick="logout()" role="button">Logout</a>
     </div>
 
   </div>
