--- a/public/404.html
+++ b/public/404.html
@@ -52,7 +52,13 @@
           <a class="nav-item nav-link" href="https://h3-sdpt.firebaseapp.com/spaces">Spaces</a>
       
 
-      <a class="btn btn-light my-2 my-sm-0" href="https://h3-sdpt.firebaseapp.com/login" role="button">Login</a>
+      
+      <a class="nav-item nav-link" href="../test">Test</a>
+
+      <a id="documents-tab" class="nav-item nav-link" href="../documents">Documents</a>
+      <a id="username" class="nav-item nav-link"></a>
+      <a id="login-btn" class="btn btn-light my-2 my-sm-0" href="https://h3-sdpt.firebaseapp.com/login" role="button">Login</a>
+      <a id="logout-btn" class="btn btn-light my-2 my-sm-0" onclick="logout()" role="button">Logout</a>
     </div>
 
   </div>
