--- a/public/login/index.html
+++ b/public/login/index.html
@@ -51,7 +51,13 @@
           <a class="nav-item nav-link" href="https://h3-sdpt.firebaseapp.com/spaces">Spaces</a>
       
 
-      <a class="btn btn-light my-2 my-sm-0" href="https://h3-sdpt.firebaseapp.com/login" role="button">Login</a>
+      
+      <a class="nav-item nav-link" href="../test">Test</a>
+
+      <a id="documents-tab" class="nav-item nav-link" href="../documents">Documents</a>
+      <a id="username" class="nav-item nav-link"></a>
+      <a id="login-btn" class="btn btn-light my-2 my-sm-0" href="https://h3-sdpt.firebaseapp.com/login" role="button">Login</a>
+      <a id="logout-btn" class="btn btn-light my-2 my-sm-0" onclick="logout()" role="button">Logout</a>
     </div>
 
   </div>
@@ -116,6 +122,7 @@
 <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase.js"></script>
 
 
+<script src="../js/load.js" type="text/javascript"></script>
 <script src="../js/login.js" type="text/javascript"></script>
 <script src="../js/main.js" type="text/javascript"></script>
 
