--- a/public/history/index.html
+++ b/public/history/index.html
@@ -29,7 +29,8 @@
 
     <body>
 
-        <nav class="navbar fixed-top navbar-expand-lg">
+        <div id="barba-wrapper">
+            <nav class="navbar fixed-top navbar-expand-lg">
 
   <a href="https://h3-sdpt.firebaseapp.com/" class="logo"> <img src="/img/H3 Logo.png" alt="" /></a>
 
@@ -64,9 +65,9 @@
 
 </nav>
 
-        <div id="base-content" class="wrapper">
+            <div id="base-content" class="wrapper barba-container">
 
-            
+                
     <div id="page-banner">
         <img id="page-image" src="../../../img/history/banner.jpeg" alt="">
         <h1 id="page-title">Our History</h1>
@@ -211,26 +212,19 @@
     </div>
 
 
-        </div>
-        <div id="footer" class="alt">
+            </div>
+            <div id="footer" class="alt">
 
     <div class="row">
 
         <div class="col">
-            <h4>SerenDPT Srl</h4>
-            <h5>Società Benefit</h5>
-            <p>P.IVA: 04396950273</p>
-            <br>
-
-            <h5>SEDE LEGALE:</h5>
-            <p>San Marco, 1808<br>
-            30124 – Venezia</p>
-            <br>
-
-            <h5>SEDE OPERATIVA:</h5>
+            <h4>Location</h4>
+            <h5>H3 (Ex-Herion)</h5>
             <p>Campo SS. Cosma e Damiano, 624-625<br>
             Giudecca<br>
-            30133 – Venezia</p>
+            30133 – Venice - Italy</p>
+            <br>
+
         </div>
         <div class="col">
             <div class="sdpt right">
@@ -242,6 +236,7 @@
     </div>
 </div>
 
+        </div>
 
     </body>
 
@@ -249,6 +244,8 @@
 <script src="../js/jquery-ui.min.js" type="text/javascript"></script>
 
 <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase.js"></script>
+
+<script src="../js/barba.min.js" type="text/javascript"></script>
 
 
 <script src="../js/load.js" type="text/javascript"></script>
