added navbar disappear on scroll

--- a/public/events/index.html
+++ b/public/events/index.html
@@ -32,16 +32,9 @@
         <div id="barba-wrapper">
             <nav class="navbar fixed-top navbar-expand-lg">
 
-  <a href="https://h3-sdpt.firebaseapp.com/" class="logo"> <img src="/img/H3 Logo.png" alt="" /></a>
-
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <a href="https://h3-sdpt.firebaseapp.com/" class="logo"> <img src="/img/H3 Logo.png" alt="" /></a>
 
     <div class="navbar-nav ml-auto">
-
       
           <a class="nav-item nav-link" href="https://h3-sdpt.firebaseapp.com/history">History</a>
       
@@ -57,8 +50,6 @@
       <a id="login-btn" class="btn btn-light my-2 my-sm-0" href="https://h3-sdpt.firebaseapp.com/login" role="button">Login</a>
       <a id="logout-btn" class="btn btn-light my-2 my-sm-0" onclick="logout()" role="button">Logout</a>
     </div>
-
-  </div>
 
 </nav>
 
@@ -80,7 +71,7 @@
                             <h6>Dec 7</h6>
                         </div>
                         <div class="back">
-                            <p>After a long wait, Apple has agreed to implement the features of the DaAaB app into Apple Maps. With the support of the Venice transportation system and the Venetian governement, the integration into Apple Maps will be available in the next two weeks.</p>
+                            <p>After a long wait, Apple has agreed to implement the features of the DaAaB app into Apple Maps. With the support of the Venice transportation system and the Venetian government, the integration into Apple Maps will be available in the next two weeks.</p>
                         </div>
                     </div>
                 </div>
@@ -93,7 +84,7 @@
                             <h6>Dec 15</h6>
                         </div>
                         <div class="back">
-                            <p>After a long wait, Apple has agreed to implement the features of the DaAaB app into Apple Maps. With the support of the Venice transportation system and the Venetian governement, the integration into Apple Maps will be available in the next two weeks.</p>
+                            <p>After a long wait, Apple has agreed to implement the features of the DaAaB app into Apple Maps. With the support of the Venice transportation system and the Venetian government, the integration into Apple Maps will be available in the next two weeks.</p>
                         </div>
                     </div>
                 </div>
@@ -106,7 +97,7 @@
                             <h6>Jan 7</h6>
                         </div>
                         <div class="back">
-                            <p>After a long wait, Apple has agreed to implement the features of the DaAaB app into Apple Maps. With the support of the Venice transportation system and the Venetian governement, the integration into Apple Maps will be available in the next two weeks.</p>
+                            <p>After a long wait, Apple has agreed to implement the features of the DaAaB app into Apple Maps. With the support of the Venice transportation system and the Venetian government, the integration into Apple Maps will be available in the next two weeks.</p>
                         </div>
                     </div>
                 </div>
