--- a/public/documentary/index.html
+++ b/public/documentary/index.html
@@ -107,9 +107,10 @@
 <script src="../js/barba.min.js" type="text/javascript"></script>
 
 
+<script src="../js/main.js" type="text/javascript"></script>
 <script src="../js/load.js" type="text/javascript"></script>
 <script src="../js/login.js" type="text/javascript"></script>
-<script src="../js/main.js" type="text/javascript"></script>
+<script src="../js/nav.js" type="text/javascript"></script>
 
 
 </html>
