--- a/public/history/index.html
+++ b/public/history/index.html
@@ -58,7 +58,7 @@
                 
     <div id="page-banner">
         <img id="page-image" src="../../../img/history/banner.jpeg" alt="">
-        <h1 id="page-title">Our History</h1>
+        <h1 id="page-title">History</h1>
     </div>
 
 
@@ -237,9 +237,10 @@
 <script src="../js/barba.min.js" type="text/javascript"></script>
 
 
+<script src="../js/main.js" type="text/javascript"></script>
 <script src="../js/load.js" type="text/javascript"></script>
 <script src="../js/login.js" type="text/javascript"></script>
-<script src="../js/main.js" type="text/javascript"></script>
+<script src="../js/nav.js" type="text/javascript"></script>
 
 
 </html>
