--- a/public/companies/index.html
+++ b/public/companies/index.html
@@ -197,6 +197,7 @@
 
 
 <script src="../js/main.js" type="text/javascript"></script>
+<script src="../js/events.js" type="text/javascript"></script>
 <script src="../js/load.js" type="text/javascript"></script>
 <script src="../js/login.js" type="text/javascript"></script>
 <script src="../js/nav.js" type="text/javascript"></script>
