--- a/public/history/index.html
+++ b/public/history/index.html
@@ -238,6 +238,7 @@
 
 
 <script src="../js/main.js" type="text/javascript"></script>
+<script src="../js/events.js" type="text/javascript"></script>
 <script src="../js/load.js" type="text/javascript"></script>
 <script src="../js/login.js" type="text/javascript"></script>
 <script src="../js/nav.js" type="text/javascript"></script>
