--- a/public/history/index.html
+++ b/public/history/index.html
@@ -2,27 +2,26 @@
 
     <head>
         
+
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 
-<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-<link rel="stylesheet" href="/resources/demos/style.css">
-<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-
 
 <link rel="stylesheet" href="https://h3-sdpt.firebaseapp.com/css/style.css"/>
 <link href="https://h3-sdpt.firebaseapp.com/css/custom.css" rel="stylesheet">
+
 
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns" crossorigin="anonymous">
 
 <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Playfair+Display" />
 
 
+
 <link rel="shortcut icon" href="https://h3-sdpt.firebaseapp.com/img/H3-Black-Logo.png" type="image/x-icon" />
+
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
@@ -30,6 +29,21 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/ScrollMagic.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/plugins/animation.gsap.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.3/plugins/debug.addIndicators.js"></script>
+
+
+
+<title>jQuery UI Datepicker - Display inline</title>
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script>
+    $(function() {
+        $("#datepicker").datepicker({
+            onSelect: findEvents,
+            minDate: new Date()
+        });
+    });
+</script>
 
     </head>
 
@@ -236,7 +250,20 @@
     </body>
 
     
+// Initialize Firebase
 <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase.js"></script>
+<script>
+    var config = {
+        apiKey: "AIzaSyDPZLaOVEBhOvLNeUn7pmJVlkf0z9boiGM",
+        authDomain: "h3-sdpt.firebaseapp.com",
+        databaseURL: "https://h3-sdpt.firebaseio.com",
+        projectId: "h3-sdpt",
+        storageBucket: "h3-sdpt.appspot.com",
+        messagingSenderId: "609543007859"
+    };
+    firebase.initializeApp(config);
+</script>
+
 
 <script src="../js/barba.min.js" type="text/javascript"></script>
 
