--- a/public/register/index.html
+++ b/public/register/index.html
@@ -36,14 +36,6 @@
 <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<script>
-    $(function() {
-        $("#datepicker").datepicker({
-            onSelect: findEvents,
-            minDate: new Date()
-        });
-    });
-</script>
 
     </head>
 
@@ -79,20 +71,11 @@
     <div class="pad-top">
         <h1 class="title">Register</h1>
         <div id="register-pane" class="content">
-            First Name:
-            <input id="register-first" type="text" placeholder="First Name">
-            <br>
-            Last Name:
-            <input id="register-last" type="text" placeholder="Last Name">
-            <br>
-            Email:
-            <input id="register-email" type="email" placeholder="Email">
-            <br>
-            Password:
-            <input id="register-password" type="password" placeholder="Password">
-            <br>
-            <input class="btn btn-light my-2 my-sm-0" type="submit" role="button" onclick="register()">
-            <br>
+            <label>First Name:</label> <input id="register-first" type="text" placeholder="First Name"> <br>
+            <label>Last Name:</label> <input id="register-last" type="text" placeholder="Last Name"> <br>
+            <label>Email:</label> <input id="register-email" type="email" placeholder="Email"> <br>
+            <label>Password:</label> <input id="register-password" type="password" placeholder="Password"> <br>
+            <input class="btn btn-light my-2 my-sm-0" type="submit" role="button" onclick="register()"> <br>
         </div>
     </div>
 
