--- a/public/index.html
+++ b/public/index.html
@@ -183,7 +183,7 @@
                     </div>
 
                     <div class="section">
-                        <h2>The Goal</h2>
+                        <h2>SerenDPT</h2>
                         <div id="goal-container" class="fade-container row">
                             <div id="company-card" class="fade-card col">
                                 <img class="icon" src="img/board-icon.png" alt="">
@@ -200,48 +200,7 @@
                         </div>
                     </div>
 
-                    <div class="section">
-                        <h2>Our Activity</h2>
-
-                        <div class="fade-container row">
-                            <div class="fade-card col flip-container" ontouchstart="this.classList.toggle('hover');">
-                                <div class="flipper">
-                                    <div class="front">
-                                        <img class="card-image" src="img/dummy/apple-maps.jpg" alt="">
-                                        <h4>DaAaB App Now Supported by Apple</h4>
-                                        <h6>Jan 26</h6>
-                                    </div>
-                                    <div class="back">
-                                        <p>After a long wait, Apple has agreed to implement the features of the DaAaB app into Apple Maps. With the support of the Venice transportation system and the Venetian governement, the integration into Apple Maps will be available in the next two weeks. After this has been implemented, SerenDPT is looing into having support from Google Maps.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="fade-card col flip-container" ontouchstart="this.classList.toggle('hover');">
-                                <div class="flipper">
-                                    <div class="front">
-                                        <img class="card-image" src="img/dummy/hive.png" alt="">
-                                        <h4>Hive Moves Into H3</h4>
-                                        <h6>Dec 15</h6>
-                                    </div>
-                                    <div class="back">
-                                        <p>After a long wait, Apple has agreed to implement the features of the DaAaB app into Apple Maps. With the support of the Venice transportation system and the Venetian governement, the integration into Apple Maps will be available in the next two weeks.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="fade-card col flip-container" ontouchstart="this.classList.toggle('hover');">
-                                <div class="flipper">
-                                    <div class="front">
-                                        <img class="card-image" src="img/dummy/hydroponics.jpg" alt="">
-                                        <h4>New Grant Money Support for Hydroponics</h4>
-                                        <h6>Nov 12</h6>
-                                    </div>
-                                    <div class="back">
-                                        <p>After a long wait, Apple has agreed to implement the features of the DaAaB app into Apple Maps. With the support of the Venice transportation system and the Venetian governement, the integration into Apple Maps will be available in the next two weeks.</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    
 
                 </div>
 
