can now write events to the database :)

--- a/public/index.html
+++ b/public/index.html
@@ -191,10 +191,10 @@
                                     <div class="flipper">
                                         <div class="front">
                                             <img class="card-image" src="img/dummy/Conference Room.jpeg" alt="">
-                                            <h4>General Room</h4>
+                                            <h4>Function Room</h4>
                                         </div>
                                         <div class="back">
-                                            <h4>General Room</h4>
+                                            <h4>Function Room</h4>
                                             <ul>
                                                 <li>30 square meters</li>
                                                 <li>25€ hourly rate</li>
