--- a/public/events/index.html
+++ b/public/events/index.html
@@ -219,7 +219,7 @@
             
 
             <div class="center">
-                <a class="btn btn-light btn-large my-2 my-sm-0" href="../eventform">Book Now</a>
+                <a class="btn btn-light btn-large my-2 my-sm-0" href="../eventform">Book Here</a>
             </div>
         </div>
     </div>
