added new tabs/pages

--- a/public/design/index.html
+++ b/public/design/index.html
@@ -97,9 +97,10 @@
 
                 
     <div class="pad-top">
-        <h1 class="title">Documents</h1>
+        <h1 class="title">Design Contest</h1>
         <div class="content">
-            <iframe src="https://drive.google.com/embeddedfolderview?id=1IvMV8jLsnaFUOHtOd_Ws23LzJ9K0Ouw3#list" style="width:100%; height:600px; border:0;"></iframe>
+            <iframe class="presentation" width="80%" height="90%" src="https://docs.google.com/document/d/e/2PACX-1vRtsWy73yD01ZVEgXICBJcdewBAKmzY3kGFL3ZS1-oSIWvWa3ZZhjf5xMMctwCW-f5-GY1YQbbN4kUT/pub?embedded=true"></iframe>
+
         </div>
     </div>
 
