--- a/public/index.html
+++ b/public/index.html
@@ -86,7 +86,9 @@
 
     <div id="admin-drawer">
         <ul id="admin-links">
-            <li><a id="documents-tab" class="nav-item nav-link" href="documents" onclick="updatePage(/documents/);closeAdmin();">Documents</a></li>
+            <li><a id="documents-tab" class="nav-item nav-link" href="https://h3-sdpt.firebaseapp.com/documents" onclick="updatePage(/documents/);closeAdmin();">Documents</a></li>
+            <li><a id="design-tab" class="nav-item nav-link" href="https://h3-sdpt.firebaseapp.com/design" onclick="updatePage(/design/);closeAdmin();">Design Contest</a></li>
+            <li><a id="rlab-tab" class="nav-item nav-link" href="https://h3-sdpt.firebaseapp.com/rlab" onclick="updatePage(/rlab/);closeAdmin();">R-Lab</a></li>
         </ul>
 
         <a id="logout-btn" class="btn btn-light my-2 my-sm-0" href="https://h3-sdpt.firebaseapp.com/" onclick="logout();resetHighlights();" role="button">Logout</a>
