--- a/public/rlab/index.html
+++ b/public/rlab/index.html
@@ -97,9 +97,10 @@
 
                 
     <div class="pad-top">
-        <h1 class="title">Documents</h1>
+        <h1 class="title">R-Lab</h1>
         <div class="content">
-            <iframe src="https://drive.google.com/embeddedfolderview?id=1IvMV8jLsnaFUOHtOd_Ws23LzJ9K0Ouw3#list" style="width:100%; height:600px; border:0;"></iframe>
+            <iframe class="presentation" src="https://docs.google.com/document/d/e/2PACX-1vRFXQuSomXM8sK6do8A8iYEGM2WDZev5U4M2AFOzSyFWXVCuog_GXf7e6iDKx-DptGfqi8JSUYb8LHs/pub?embedded=true" width="80%" height="120%"></iframe>
+
         </div>
     </div>
 
