--- a/public/documentary/index.html
+++ b/public/documentary/index.html
@@ -84,7 +84,9 @@
 
     <div id="admin-drawer">
         <ul id="admin-links">
-            <li><a id="documents-tab" class="nav-item nav-link" href="documents" onclick="updatePage(/documents/);closeAdmin();">Documents</a></li>
+            <li><a id="documents-tab" class="nav-item nav-link" href="https://h3-sdpt.firebaseapp.com/documents" onclick="updatePage(/documents/);closeAdmin();">Documents</a></li>
+            <li><a id="design-tab" class="nav-item nav-link" href="https://h3-sdpt.firebaseapp.com/design" onclick="updatePage(/design/);closeAdmin();">Design Contest</a></li>
+            <li><a id="rlab-tab" class="nav-item nav-link" href="https://h3-sdpt.firebaseapp.com/rlab" onclick="updatePage(/rlab/);closeAdmin();">R-Lab</a></li>
         </ul>
 
         <a id="logout-btn" class="btn btn-light my-2 my-sm-0" href="https://h3-sdpt.firebaseapp.com/" onclick="logout();resetHighlights();" role="button">Logout</a>
@@ -97,11 +99,8 @@
     <div class="pad-top">
         <h1 class="title">Documentary</h1>
         <div class="content">
-            <iframe width="420" height="315"
-    src="https://www.youtube.com/embed/ShCkU3ZzXDM">
-</iframe>
-<iframe width="420" height="315"
-    src="https://www.youtube.com/embed/GEOh8uazxVc">
+            <iframe class="presentation" width="90%" height="90%"
+    src="https://www.youtube.com/embed/rrbeGRLUO_k">
 </iframe>
 
         </div>
